make new progect

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </a>
             </div>
             <div class="img">
-                <a href="#" class="img__link"><img src="img/img2.jpg" alt="">
+                <a class="img__link" href="#"><img src="img/img2.jpg" alt="">
                     <div class="data">
                         <span class="num">14</span>
                         <span class="mounth">nov</span>
@@ -53,6 +53,7 @@
                 </a>
             </div>
         </div>
+        <button class="button" type="button">viev more</button>
     </main>
 </body>
 </html>
