i don't no what i need do with gradient

--- a/index.html
+++ b/index.html
@@ -17,16 +17,17 @@
         </div>
         <div class="link">
             <div class="img">
-                <a href="#" class="img__link"><img src="img/img1.jpg" alt="">
-                    <div class="data">
-                        <span class="num">20</span>
-                        <span class="mounth">nov</span>
-                    </div>
-                    <p class="img__about">
-                        Green Smoothies: Too Much of a Good Thing?
-                    </p>
-                    <p class="img__text">By Auskteez - 2 hours ago</p>
+                <a href="#" class="img__link">
+                    <img src="img/img1.jpg" alt="">
                 </a>
+                <div class="data">
+                    <span class="num">20</span>
+                    <span class="mounth">nov</span>
+                </div>
+                <p class="img__about">
+                    Green Smoothies: Too Much of a Good Thing?
+                </p>
+                <p class="img__text">By Auskteez - 2 hours ago</p>
             </div>
             <div class="img">
                 <a class="img__link" href="#"><img src="img/img2.jpg" alt="">
