--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <p class="img__text">By Auskteez - 2 hours ago</p>
             </div>
             <div class="img">
-                <a class="img__link" href="#"><img src="img/img2.jpg" alt="">
+                <a class="img__link" href="#"><img src="img/img2.jpg" alt=""></a>
                     <div class="data">
                         <span class="num">14</span>
                         <span class="mounth">nov</span>
@@ -39,10 +39,9 @@
                         Growing Food and a “Thirst” for Innovation
                     </p>
                     <p class="img__text">By Auskteez - 3 hours ago</p>
-                </a>
             </div>
             <div class="img">
-                <a href="#" class="img__link"><img src="img/img3.jpg" alt="">
+                <a href="#" class="img__link"><img src="img/img3.jpg" alt=""></a>
                     <div class="data">
                         <span class="num">10</span>
                         <span class="mounth">nov</span>
@@ -51,7 +50,6 @@
                         Pesticides & Food: What You Need to Know
                     </p>
                     <p class="img__text">By Auskteez - 6 hours ago</p>
-                </a>
             </div>
         </div>
         <button class="button" type="button">viev more</button>
